--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,114 @@
-/* CSS Document */
+body {
+	margin: 0px;
+	padding: 0px;
+	background-image: url(images/background.jpg);
+}
+	.wrapper {
+	background-color: #a69f8a;
+	width: 950px;
+	text-align: left;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: auto;
+	margin-left: auto;
+	border-top-color: #f2f2f2;
+	border-right-color: #f2f2f2;
+	border-bottom-color: #f2f2f2;
+	border-left-color: #f2f2f2;
+	border-top-width: 10px;
+	border-right-width: 2px;
+	border-bottom-width: 10px;
+	border-left-width: 2px;
+	border-top-style: solid;
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-left-style: solid;
+}
+.navigation {
+	padding: 0px;
+	margin-top: 20px;
+	margin-right: 0px;
+	margin-bottom: 20px;
+	margin-left: 10px;
+}
+.navigation li {
+	display: inline;
+}
+.navigation li a {
+	background-color: #f2f2f2;
+	padding-top: 10px;
+	padding-right: 30px;
+	padding-bottom: 10px;
+	padding-left: 30px;
+	border: 2px solid #222940;
+	color: #222940;
+	text-decoration: none;
+	margin-right: 40px;
+}
+.navigation li a:hover {
+	border-top-color: #f2f2f2;
+	border-right-color: #f2f2f2;
+	border-bottom-color: #f2f2f2;
+	border-left-color: #f2f2f2;
+	color: #f2f2f2;
+	background-color: #222940;
+}
+.content {
+	margin-top: 0px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	padding: 0px;
+}
+.main {
+	background-color: #f2f2f2;
+	padding: 20px;
+	border-radius: 15px;
+}
+.home-img img {
+	border: 1px solid #000;
+	margin-right: 5px;
+	margin-bottom: 5px;
+}
 
+p {
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-size: 16px;
+	line-height: 2em;
+	padding: 0px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 2.25em;
+	margin-left: 0px;
+	color: #333;
+}
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	background-image: ;
+	background-attachment: fixed;
+	background-color: #FFF;
+	background-repeat: repeat;
+	background-position: center center;
+	background-image: url(images/background.jpg);
+}.wrapper {
+	background-repeat: repeat;
+	left: 40px;
+	top: 40px;
+	float: none;
+}
