--- a/styles.css
+++ b/styles.css
@@ -2,27 +2,15 @@ body {
 	margin: 0px;
 	padding: 0px;
 	background-image: url(images/background.jpg);
-}
-	.wrapper {
-	background-color: #a69f8a;
-	width: 950px;
-	text-align: left;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-right: auto;
-	margin-left: auto;
-	border-top-color: #f2f2f2;
-	border-right-color: #f2f2f2;
-	border-bottom-color: #f2f2f2;
-	border-left-color: #f2f2f2;
-	border-top-width: 10px;
-	border-right-width: 2px;
-	border-bottom-width: 10px;
-	border-left-width: 2px;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
+	position: static;
+	background-repeat: repeat;
+	left: auto;
+	top: auto;
+	right: auto;
+	bottom: auto;
+	page-break-before: always;
+	page-break-after: always;
+	background-attachment: scroll;
 }
 .navigation {
 	padding: 0px;
@@ -37,13 +25,16 @@ body {
 .navigation li a {
 	background-color: #f2f2f2;
 	padding-top: 10px;
-	padding-right: 30px;
+	padding-right: 40px;
 	padding-bottom: 10px;
 	padding-left: 30px;
 	border: 2px solid #222940;
 	color: #222940;
 	text-decoration: none;
-	margin-right: 40px;
+	margin-top: 60px;
+	margin-right: 60px;
+	margin-bottom: 60px;
+	margin-left: 20px;
 }
 .navigation li a:hover {
 	border-top-color: #f2f2f2;
@@ -55,20 +46,42 @@ body {
 }
 .content {
 	margin-top: 0px;
-	margin-right: 10px;
-	margin-bottom: 10px;
-	margin-left: 10px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	margin-left: 20px;
 	padding: 0px;
+	position: relative;
+	left: auto;
+	top: auto;
+	right: auto;
+	bottom: auto;
+	background-attachment: scroll;
+	height: 800px;
+	width: 800px;
 }
 .main {
-	background-color: #f2f2f2;
-	padding: 20px;
-	border-radius: 15px;
+	background-color: #F2F2F2;
+	padding: 0px;
+	border-radius: 0px;
+	border-top-style: solid;
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-left-style: solid;
+	margin: auto;
+	page-break-before: always;
+	page-break-after: always;
+	background-attachment: scroll;
+	position: relative;
+	left: auto;
+	top: auto;
+	right: auto;
+	bottom: auto;
 }
 .home-img img {
 	border: 1px solid #000;
 	margin-right: 5px;
 	margin-bottom: 5px;
+	background-color: #C0F;
 }
 
 p {
@@ -84,31 +97,27 @@ p {
 }
 	
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	background-image: ;
-	background-attachment: fixed;
-	background-color: #FFF;
-	background-repeat: repeat;
-	background-position: center center;
-	background-image: url(images/background.jpg);
-}.wrapper {
+.wrapper {
 	background-repeat: repeat;
 	left: 40px;
 	top: 40px;
 	float: none;
+	position: relative;
+	right: 40px;
+	bottom: 40px;
+	page-break-before: always;
+	page-break-after: always;
+}
+.wrapper .content .main .labels {
+	position: relative;
+	float: none;
+	padding: 0px;
+	margin: 0px;
+	left: auto;
+	top: auto;
+	right: auto;
+	bottom: auto;
+	page-break-before: always;
+	page-break-after: always;
+	background-attachment: scroll;
 }
