--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,21 @@ body {
 	margin-bottom: 60px;
 	margin-left: 20px;
 }
+.wrapper .content .main .labels table tr td div {
+	border-top-style: double;
+	border-right-style: double;
+	border-bottom-style: double;
+	border-left-style: double;
+	background-color: #FFFFD7;
+	padding: 20px;
+}
+.wrapper .content .main .labels table tr td div:hover{
+	border-top-color: #f2f2f2;
+	border-right-color: #f2f2f2;
+	border-bottom-color: #f2f2f2;
+	border-left-color: #f2f2f2;
+	color: #f2f2f2;
+	background-color: #222940;}
 .navigation li a:hover {
 	border-top-color: #f2f2f2;
 	border-right-color: #f2f2f2;
@@ -79,9 +94,8 @@ body {
 }
 .home-img img {
 	border: 1px solid #000;
-	margin-right: 5px;
-	margin-bottom: 5px;
-	background-color: #C0F;
+	margin: 5px;
+	padding: 10px;
 }
 
 p {
